Build with Java 9 on travis as well

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: android
 
 matrix:
   include:
+    - jdk: oraclejdk9
+      env: TEST=java
     - jdk: oraclejdk8
       env: TEST=java
     - jdk: openjdk7
