--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ matrix:
   include:
     - jdk: oraclejdk9
       env: TEST=java
+      addons:
+        apt:
+          packages:
+            - oracle-java9-installer
     - jdk: oraclejdk8
       env: TEST=java
     - jdk: openjdk7
