--- a/commonmark-test-util/pom.xml
+++ b/commonmark-test-util/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.atlassian.commonmark</groupId>
         <artifactId>commonmark-parent</artifactId>
-        <version>0.14.0</version>
+        <version>0.14.0-jpms</version>
     </parent>
 
     <artifactId>commonmark-test-util</artifactId>
