--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.atlassian.commonmark</groupId>
     <artifactId>commonmark-parent</artifactId>
-    <version>0.14.0</version>
+    <version>0.14.0-jpms</version>
     <name>commonmark-java parent</name>
     <description>
         Java implementation of CommonMark, a specification of the Markdown format for turning plain text into formatted
@@ -33,8 +33,30 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <commonmark.javadoc.location>${project.basedir}/../commonmark/target/apidocs/</commonmark.javadoc.location>
     </properties>
+
+    <repositories>
+        <repository>
+            <snapshots>
+                <enabled>
+                    false
+                </enabled>
+            </snapshots>
+            <id>
+                bintray-dua3-oss
+            </id>
+            <name>
+                bintray
+            </name>
+            <url>
+                https://dl.bintray.com/dua3/oss
+            </url>
+        </repository>
+    </repositories>
 
     <build>
         <pluginManagement>
@@ -42,7 +64,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.7.0</version>
+                    <version>3.8.1</version>
                     <configuration>
                         <source>7</source>
                         <target>7</target>
@@ -51,7 +73,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.0.2</version>
+                    <version>3.2.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -75,7 +97,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-		    <version>2.22.1</version>
+		    <version>2.22.2</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -87,49 +109,49 @@
             <dependency>
                 <groupId>com.atlassian.commonmark</groupId>
                 <artifactId>commonmark</artifactId>
-                <version>0.14.0</version>
+                <version>0.14.0-jpms</version>
             </dependency>
             <dependency>
                 <groupId>com.atlassian.commonmark</groupId>
                 <artifactId>commonmark-ext-autolink</artifactId>
-                <version>0.14.0</version>
+                <version>0.14.0-jpms</version>
             </dependency>
             <dependency>
                 <groupId>com.atlassian.commonmark</groupId>
                 <artifactId>commonmark-ext-ins</artifactId>
-                <version>0.14.0</version>
+                <version>0.14.0-jpms</version>
             </dependency>
             <dependency>
                 <groupId>com.atlassian.commonmark</groupId>
                 <artifactId>commonmark-ext-gfm-strikethrough</artifactId>
-                <version>0.14.0</version>
+                <version>0.14.0-jpms</version>
             </dependency>
             <dependency>
                 <groupId>com.atlassian.commonmark</groupId>
                 <artifactId>commonmark-ext-gfm-tables</artifactId>
-                <version>0.14.0</version>
+                <version>0.14.0-jpms</version>
             </dependency>
             <dependency>
                 <groupId>com.atlassian.commonmark</groupId>
                 <artifactId>commonmark-ext-heading-anchor</artifactId>
-                <version>0.14.0</version>
+                <version>0.14.0-jpms</version>
             </dependency>
             <dependency>
                 <groupId>com.atlassian.commonmark</groupId>
                 <artifactId>commonmark-ext-yaml-front-matter</artifactId>
-                <version>0.14.0</version>
+                <version>0.14.0-jpms</version>
             </dependency>
             <dependency>
                 <groupId>com.atlassian.commonmark</groupId>
                 <artifactId>commonmark-test-util</artifactId>
-                <version>0.14.0</version>
+                <version>0.14.0-jpms</version>
             </dependency>
 
             <!-- Common test dependencies -->
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.12</version>
+                <version>4.13</version>
             </dependency>
             <dependency>
                 <groupId>org.openjdk.jmh</groupId>
@@ -152,7 +174,7 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.7.9</version>
+                        <version>0.8.5</version>
                         <configuration>
                             <excludes>
                                 <!-- Classes from test-util -->
@@ -195,7 +217,7 @@
         <connection>scm:git:git@github.com:atlassian/commonmark-java.git</connection>
         <developerConnection>scm:git:git@github.com:atlassian/commonmark-java.git</developerConnection>
         <url>https://github.com/atlassian/commonmark-java</url>
-        <tag>commonmark-parent-0.14.0</tag>
+        <tag>commonmark-parent-0.14.0-jpms</tag>
     </scm>
 
 </project>
